# flight-booking-agent-core

./: .env.example  .gitignore  entrypoint.py  main.py  pyproject.toml  requirements.txt
.bedrock_agentcore/flightbookagent/: Dockerfile
docs/: sequence-diagram.md
mcp_server/: server.py
mock_api/: app.py
src/graph/: graph.py
src/llm/: llm.py
src/nodes/: nodes.py
src/state/: state.py
src/tools/: tools.py
static/: index.html
